# FastAPI_Practice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml
app/: config.py  database.py  main.py
app/models/: note.py
app/routers/: note.py
app/schemas/: __init__.py  note.py
app/services/: note.py
migrations/: env.py
migrations/versions/: 0917bc66cb1a_create_notes_table.py
scripts/: start.py
